--- a/Codegarden2018Group1/Content/Styles/Partials/_MainBlock.scss
+++ b/Codegarden2018Group1/Content/Styles/Partials/_MainBlock.scss
@@ -31,6 +31,10 @@
             transform: scale(1);
             transition: $transition;
         }
+
+        &.speaker-size {
+            height: 250px;
+        }
     }
 
     .link-block-content {
