--- a/Codegarden2018Group1/Content/Styles/Partials/_Speakers.scss
+++ b/Codegarden2018Group1/Content/Styles/Partials/_Speakers.scss
@@ -1,12 +1,15 @@
 ﻿@import "../Helpers/Mixins";
 @import "../Helpers/Vars";
 
-#speaker-size {
-    height: 250px;
+.speaker-size {
+ 
 
     .link-block-content {
         left: 10px;
         text-align: left;
+        p, h3{
+            text-align:left;
+        }
     }
 
     .read-more {
